add checked to radiobutton html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <input class="input-second" type="text" name="" />
         </label>
         <div>
-          <input type="radio" id="radioone" name="radio" />
+          <input type="radio" id="radioone" name="radio" checked />
           <label for="radioone">davor trennen</label>
         </div>
         <div>
